@@ -1,5 +1,5 @@
 # Process this file with autoconf to produce a configure script.
-AC_INIT(harminv, 1.2.1, stevenj@alum.mit.edu)
+AC_INIT(harminv, 1.3, stevenj@alum.mit.edu)
 AM_INIT_AUTOMAKE(1.6)
 AC_CONFIG_SRCDIR(harminv.c)
 AM_CONFIG_HEADER(config.h)
@@ -7,7 +7,7 @@ AM_MAINTAINER_MODE
 
 # Shared-library version number; indicates api compatibility, and is
 # *not* the same as the "public" version number.  CURRENT:REVISION:AGE
-SHARED_VERSION_INFO="2:2:0"
+SHARED_VERSION_INFO="2:3:0"
 AC_SUBST(SHARED_VERSION_INFO)
 AM_ENABLE_SHARED(no) dnl shared libs cause too many headaches to be default
 
