@@ -1,4 +1,4 @@
-.\" Copyright (c) 2000 Massachusetts Institute of Technology
+.\" Copyright (c) 2005 Massachusetts Institute of Technology
 .\" 
 .\" This program is free software; you can redistribute it and/or modify
 .\" it under the terms of the GNU General Public License as published by
@@ -14,7 +14,7 @@
 .\" along with this program; if not, write to the Free Software
 .\" Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 .\"
-.TH HARMINV 1 "June 4, 2004" "harminv" "harminv"
+.TH HARMINV 1 "June 4, 2005" "harminv" "harminv"
 .SH NAME
 harminv \- extract mode frequencies from time-series data
 .SH SYNOPSIS
@@ -225,5 +225,5 @@ to 10.
 .SH BUGS
 Send bug reports to S. G. Johnson, stevenj@alum.mit.edu.
 .SH AUTHORS
-Written by Steven G. Johnson.  Copyright (c) 2004 by the Massachusetts
+Written by Steven G. Johnson.  Copyright (c) 2005 by the Massachusetts
 Institute of Technology.
